--- a/wear/src/main/res/layout/row_forecast.xml
+++ b/wear/src/main/res/layout/row_forecast.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
@@ -19,13 +20,16 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:textColor="#777777"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
-        <ImageView
+        <com.mauriciotogneri.common.widgets.CustomTextView
             android:id="@+id/icon"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:src="@drawable/sunny"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/icon_test"
+            android:textColor="#777777"
+            android:textSize="22sp"
+            custom:font="weathericons"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
