--- a/wear/src/main/res/layout/row_forecast.xml
+++ b/wear/src/main/res/layout/row_forecast.xml
@@ -15,32 +15,46 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical"
-            android:layout_marginRight="10dp"
-            android:textColor="#777777"
-            android:textSize="16sp"
-            tools:text="Fri"/>
-
-        <com.mauriciotogneri.common.widgets.CustomTextView
-            android:id="@+id/icon"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="#777777"
-            android:textSize="24sp"
-            custom:font="weathericons"
-            tools:text="ICON"/>
+            android:layout_weight="2"
+            android:gravity="center">
+
+            <com.mauriciotogneri.common.widgets.CustomTextView
+                android:id="@+id/icon"
+                android:layout_width="36dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#777777"
+                android:textSize="24sp"
+                custom:font="weathericons"
+                tools:text="ICON"/>
+
+        </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|center_vertical"
             android:layout_marginLeft="10dp"
+            android:layout_weight="4"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#777777"
+                android:textSize="15sp"
+                tools:text="Fri"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:gravity="right|center_vertical"
             android:orientation="vertical">
 
             <TextView
@@ -55,8 +69,10 @@
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lines="1"
                 android:textColor="#777777"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 tools:text="Sunny"/>
 
         </LinearLayout>
